# doc2ann

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  build.sh  dev.md  doc2ann.py  hi.py  hi.py.bak  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  rerecord-tests.sh  setup.py
src/: doc2ann.py  fix_docstring.py  runner.py
src/doc2ann.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/test/: test_doc2ann.py
src/test/fixtures/: functions_with_comments.py  functions_with_comments.py.diff  hi.py.diff  method_and_func.py.diff  module_ann.py  module_ann.py.diff  other_docstring.py  other_docstring.py.diff  type_comment.py  type_comment_with_docstring.py  type_comment_with_docstring.py.diff
