[project]
name = "doc2ann"
version = "0.0.1"
dependencies = ["docstring_parser", "refactor"]

[project.optional-dependencies]
dev = ["pre-commit", "mypy", "flake8", "black"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
doc2ann = "doc2ann:main"

[tool.distutils.bdist_wheel]
universal = true
